--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </div>
 
   <nav>
-    <a href="index.html">Home</a>
+    <a href="index2.html">Home</a>
     <a href="#">Menu</a>
     <a href="#footer">Kontak</a>
   </nav>
